--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 		</dependency>
 		
 		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+		
+		<dependency>
 		    <groupId>net.devh</groupId>
 		    <artifactId>grpc-server-spring-boot-starter</artifactId>
 		    <version>2.8.0.RELEASE</version>
