Se añade servicio que regresa una lista y se integra con los servicios de Cova Solutions

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,15 @@
 		    <version>8.0.13</version>
 		</dependency>
 		
+		
+		<!-- 	CovaCommon    -->
+		<dependency>
+			<groupId>com.cova.ws</groupId>
+			<artifactId>CovaCommons</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
