--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+
+##########         gRPC     ################
 grpc.server.port=9095
+
+
+
+
+##########         BASE DE DATOS     ################
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.auto-commit=false
+spring.datasource.url=jdbc:mysql://cova-database.cgowada8ngch.us-east-2.rds.amazonaws.com:3306/cova?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&serverTimezone=UTC
+spring.datasource.username=admin
+spring.datasource.password=Tabasco2
